name:                StockholmAlignment
version:             1.2.0
synopsis:            Libary for Stockholm aligmnent format
description:         Libary containing parsing and visualisation functions and datastructures for Stockholm aligmnent format
license:             GPL-3
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@informatik.uni-freiburg.de
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10.0
Tested-With: GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.1

extra-source-files:
  README.md changelog

source-repository head
  type:     git
  location: https://github.com/eggzilla/StockholmAlignment

source-repository this
  type:     git
  location: https://github.com/eggzilla/StockholmAlignment/tree/1.2.0
  tag:      1.2.0

library
  -- Modules exported by the library.
  exposed-modules:   Bio.StockholmParser
                     Bio.StockholmData

  -- compiler-options:
  ghc-options:         -Wall -fno-warn-unused-do-bind

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.5 && <5,
                       parsec>=3.1.9,
                       text,
                       vector,
                       ParsecTools,
                       filepath,
                       directory,
                       either-unwrap

  -- Directories containing source files.
  hs-source-dirs:      src
